data/derived/fa15/progs/unify/prog1582.ml.out
Characters 76-77:
  else wwhile (f,result);;
               ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
